@startuml
' Change Password - Class Diagram for PizzaShop
' Generated to reflect the actual classes involved in the change-password use case.

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam stereotypeFontStyle bold
skinparam stereotypeCBackgroundColor #EEEBDC
skinparam stereotypeCFontColor #333333

package "com.swp.pizzashop.controller" {
  class ProfileController <<Controller>> {
    - userService: UserService
    -- operations --
    + profile(currentUser: User, model: Model): String
    + changePassword(currentUser: User, oldPassword: String, newPassword: String, confirmPassword: String, model: Model): String
  }
}

package "com.swp.pizzashop.service" {
  interface UserService {
    + changePassword(user: User, oldPassword: String, newPassword: String): ChangePasswordResult
  }

  enum ChangePasswordResult {
    SUCCESS
    OLD_PASSWORD_INVALID
    NEW_PASSWORD_SAME_AS_OLD
    WEAK_NEW_PASSWORD
    ERROR
  }
}

package "com.swp.pizzashop.service.impl" {
  class UserServiceImpl <<Service>> {
    - userRepository: UserRepository
    - passwordEncoder: BCryptPasswordEncoder
    -- operations --
    + changePassword(user: User, oldPassword: String, newPassword: String): ChangePasswordResult
  }
}

package "com.swp.pizzashop.repository" {
  interface UserRepository <<Repository>> {
    + findByEmail(email: String): User
    + countByIsDeletedFalse(): long
    + countByStatusAndIsDeletedFalse(active: String): long
    ..extends JpaRepository<User, Long>..
  }
}

package "com.swp.pizzashop.model" {
  class User <<Entity>> {
    - id: Long
    - email: String
    - password: String
    .. other fields ..
  }
}

' External dependency used by service for password hashing
class BCryptPasswordEncoder {
  + encode(rawPassword: String): String
  + matches(rawPassword: String, encodedPassword: String): boolean
}

' Relationships (use, realize, and reference)
ProfileController --> UserService : uses
UserService <|.. UserServiceImpl : implements
UserServiceImpl --> UserRepository : uses
UserRepository --> User : manages
UserServiceImpl ..> BCryptPasswordEncoder : uses
UserService ..> ChangePasswordResult : returns
ProfileController ..> ChangePasswordResult : handles

@enduml